welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:9: error: not found: value compteur
    if (compteur != 0) {return true}
        ^